# return_address_patching

./: Cargo.toml  README.md
src/: main.rs  shellcode.rs
